# omni-classifier

./: .gitignore  EVAL.md  README.md  ao_missed_by_v2.csv  audio_classifier_service.py  pyproject.toml  requirements.txt
configs/: audio_classifier.example.yaml
examples/: audio_samples.csv
omni_classifier/: __init__.py  cli.py  config.py  errors.py  manifest.py  parsing.py  prompting.py  runner.py
prompts/: system_v2_acoustic.txt
tests/: test_config.py  test_manifest.py  test_parsing.py  test_prompting.py  test_runner.py
tools/: build_manifest.py  characterize.py  make_config.py  score.py
